[package]
name = "ruby-bin"
version = "0.0.0-dev1"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"
description = "Binaries for the Ruby language"
readme = "../README.md"
repository = "https://github.com/kenaniah/ruby-parser"
license = "MIT"

[dependencies]
clap = "3.0.0-beta.2"
ruby-parser = {path = "../ruby-parser"}
