[package]
name = "ruby-lexer-benchmarks"
version = "0.1.0"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruby-lexer = { path = "../ruby-lexer" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexing_benchmark"
harness = false
