[package]
name = "ruby-lexer"
version = "0.1.0"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"
#nom_locate = "2.0.0"
nom_locate = { git = "https://github.com/kenaniah/nom_locate" }
