[package]
name = "ruby-lexer"
version = "0.0.0-dev1"
authors = ["Kenaniah Cerny <kenaniah@gmail.com>"]
edition = "2018"
description = "A parser for the Ruby language"
readme = "../README.md"
repository = "https://github.com/kenaniah/ruby-lexer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codemap = "0.1.3"
nom = "6.0.0-alpha1"
memchr = "2.2.3"
